# ubuntu-desktop-control-mcp

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  INSTALL_COMMANDS.md  QUICKSTART.md  README.md  install_system_deps.sh  pyproject.toml  server.py  test_server.py  ubuntu-desktop-control-mcp.code-workspace
.claude/: GUI_TESTS_FIX_SUMMARY.md  MANUAL_TESTING.md  OPTIMIZATION_COMPLETE.md  TEST_ARCHITECTURE_OVERHAUL.md  TEST_GUI_ENHANCEMENT.md  TEST_GUI_README.md  TEST_SUITE_REFACTORING.md
client-config/Claude Code/: config.json
client-config/Codex/: config.toml
client-config/VS Code/: mcp.json
config-examples/: claude-code-config.json  codex-config.json  codex-config.toml  vscode-mcp.json  vscode-settings.json
prompts/: README.md  baseline_display_check.json  capture_full_desktop.json  capture_region_for_task.json  convert_screenshot_coordinates.json  coordinate_mismatch_recovery.json  end_to_end_capture_and_act.json  grid_overlay_snapshot.json  hover_and_capture.json  quadrant_scan.json  safe_click.json
scripts/: add_gui_tests.py  install.sh  launch_test_gui.sh  run_server.sh
tests/: README.md  __init__.py  conftest.py  test_click_screen.py  test_diagnostics.py  test_element_detection.py  test_keyboard.py  test_map_gui_elements.py  test_mcp_workflow.py  test_mouse.py  test_screenshot.py  test_workflow.py
tests/gui/: __init__.py  test_dialogs.py  test_gui_app.py  test_runner_helper.py
ubuntu_desktop_control/: server.py
